--- a/JavaScriptCore/pcre/AUTHORS
+++ b/JavaScriptCore/pcre/AUTHORS
@@ -11,6 +11,18 @@ Cambridge, England. Phone: +44 1223 334714.
 Copyright (c) 1997-2005 University of Cambridge
 All rights reserved
 
+
 UTF-16 changes by Darin Adler and Geoff Garen
-Copyright (c) 2005 Apple Computer, Inc.
+Copyright (c) 2005, 2006, 2007 Apple Inc.
 All rights reserved
+
+
+THE C++ WRAPPER LIBRARY
+-----------------------
+
+Written by:       Google Inc.
+
+Copyright (c) 2005 Google Inc
+All rights reserved
+
+####
