--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-10-17  Mark Rowe  <mrowe@apple.com>
+
+        Reviewed by Eric and Geoff.
+
+        <rdar://problem/5453743> Repro ASSERT in CachedResource::setEncodedSize() loading image in background tab
+        http://bugs.webkit.org/show_bug.cgi?id=15191
+
+        * loader/DocLoader.cpp:
+        (WebCore::DocLoader::setAutoLoadImages): Don't start a load if the CachedImage is already loading.
+
 2007-10-17  Justin Garcia  <justin.garcia@apple.com>
 
         Reviewed by Harrison.
