--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,5 +1,13 @@
 2007-10-16  Adam Roben  <aroben@apple.com>
 
+        Add FindSafari
+
+        Reviewed by Darin.
+
+        * WebKit.vcproj/WebKit.sln:
+
+2007-10-16  Adam Roben  <aroben@apple.com>
+
         Rename WebKit_debug.dll to WebKit.dll for the Debug configuration
 
         This is needed so that we can stop having Safari delay-load WebKit,
