--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,14 @@
+2007-10-17  Adam Roben  <aroben@apple.com>
+
+        Windows build fix
+
+        Reviewed by NOBODY.
+
+        * platform/graphics/AffineTransform.h: Don't #include
+        ApplicationServices.h.
+        * platform/graphics/cg/GraphicsContextCG.cpp: Add an #include that's
+        needed now that we're not #including ApplicationServices.h.
+
 2007-10-17  Mark Rowe  <mrowe@apple.com>
 
         Gtk build fix.  Move non-pthread stubs from Threading.h to ThreadingNone.cpp to prevent
