Build fix for VC++ Express
        Reviewed by NOBODY.

        * FindSafari/FindSafari.vcproj: Explicitly link against advapi32.lib
        and ole32.lib.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26727 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,12 @@
+2007-10-17  Adam Roben  <aroben@apple.com>
+
+        Build fix for VC++ Express
+
+        Reviewed by NOBODY.
+
+        * FindSafari/FindSafari.vcproj: Explicitly link against advapi32.lib
+        and ole32.lib.
+
 2007-10-16  Kevin McCullough  <kmccullough@apple.com>
 
         Reviewed by Sam.
