--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,13 @@
+2007-10-17  Rob Buis  <buis@kde.org>
+
+        Reviewed by Darin, Adam, and Maciej.
+
+        Testcase for:
+        http://bugs.webkit.org/show_bug.cgi?id=12988
+        First element (in document order) is not returned when other duplicate ID-ed elements were created first
+
+        * fast/dom/duplicate-ids-document-order.html: Added.
+
 2007-10-17  Alice Liu  <alice.liu@apple.com>
 
         Rubber-stamped by Adele.
