Add back the call to register WebKit that we had before WebKitInitializer existed
         This is needed to ensure that the right WebKit is used when
         instantiating COM objects.

         Reviewed by Oliver.

         * DumpRenderTree/win/debug_internal.vsprops: Define
         DEBUG_WEBKIT_HAS_SUFFIX.
         * DumpRenderTree/win/DumpRenderTree.cpp:
         (initialize):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26733 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,5 +1,19 @@
 2007-10-17  Adam Roben  <aroben@apple.com>
 
+        Add back the call to register WebKit that we had before WebKitInitializer existed
+
+        This is needed to ensure that the right WebKit is used when
+        instantiating COM objects.
+
+        Reviewed by Oliver.
+
+        * DumpRenderTree/win/debug_internal.vsprops: Define
+        DEBUG_WEBKIT_HAS_SUFFIX.
+        * DumpRenderTree/win/DumpRenderTree.cpp:
+        (initialize):
+
+2007-10-17  Adam Roben  <aroben@apple.com>
+
         Import File::Basename in webkitdirs since we use it
 
         Reviewed by NOBODY.
