2007-10-18  Eric Seidel  <eric@webkit.org>
        Reviewed by Maciej.

        Fix crashers in SVGViewSpec::parseViewSpec
        http://bugs.webkit.org/show_bug.cgi?id=15504

        Test is blocked by bug 15503, landed as:
        * svg/dom/viewspec-parser.html-disabled

        * bindings/scripts/CodeGeneratorObjC.pm: support classes where all parents are interfaces
        * ksvg2/svg/SVGViewSpec.cpp:
        (WebCore::SVGViewSpec::parseViewSpec):
        * ksvg2/svg/SVGViewSpec.idl: Added.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26740 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,15 @@
+2007-10-18  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Maciej.
+        
+        Test case for http://bugs.webkit.org/show_bug.cgi?id=15504
+        Landed -disabled as it's blocked by:
+        http://bugs.webkit.org/show_bug.cgi?id=15503
+
+        * fast/js/resources/js-test-post.js: add support for XHTML
+        * fast/js/resources/js-test-pre.js: add support for XHTML
+        * svg/dom/viewspec-parser.html-disabled: Added.
+
 2007-10-17  Rob Buis  <buis@kde.org>
 
         Reviewed by Darin, Adam, and Maciej.
