Windows build fix.
        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::applyProperty): Add braces around cases that have local variables now.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26744 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,5 +1,12 @@
 2007-10-18  Alexey Proskuryakov  <ap@webkit.org>
 
+        Windows build fix.
+
+        * css/CSSStyleSelector.cpp:
+        (WebCore::CSSStyleSelector::applyProperty): Add braces around cases that have local variables now.
+
+2007-10-18  Alexey Proskuryakov  <ap@webkit.org>
+
         Release build fix.
 
         * css/CSSStyleSelector.cpp:
