Reviewed by Anders.
Fix last layout test failure seen on buildbot "trunk-mac-ppc-release".
Problem: "svg/custom/mask-excessive-malloc.svg -> crashed"

Clamp any ImageBuffer allocation within SVG to the RenderView's visibleSize
to avoid excessive mallocs (in the testcase above 1000000x1000000)


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26745 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,13 @@
+2007-10-18  Nikolas Zimmermann  <zimmermann@kde.org>
+
+        Reviewed by Anders.
+
+        Regenerated result of following test, now that ImageBuffers are correctly clipped to the
+        visible frame size (RenderView) - no more drawing outside that region.
+
+        * platform/mac/svg/custom/js-late-gradient-and-object-creation-expected.checksum:
+        * platform/mac/svg/custom/js-late-gradient-and-object-creation-expected.png:
+
 2007-10-18  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Maciej.
