Fix <rdar://5547784> ProgIDMacros.h should explicitly use wide strings
         Reviewed by Adele.

         * ProgIDMacros.h: Always use wide strings instead of relying on the
         TEXT macro.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26755 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,12 @@
+2007-10-18  Adam Roben  <aroben@apple.com>
+
+        Fix <rdar://5547784> ProgIDMacros.h should explicitly use wide strings
+
+        Reviewed by Adele.
+
+        * ProgIDMacros.h: Always use wide strings instead of relying on the
+        TEXT macro.
+
 2007-10-17  Adam Roben  <aroben@apple.com>
 
         Fix for clean builds needed after r26683
