--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-19  Dan Bernstein  <mitz@apple.com>
+
+        Rubber-stamped by Sam Weinig.
+
+        removing a commented-out test and a test that no longer fails
+
+        * platform/mac-leopard/Skipped:
+
 2007-10-19  David Kilzer  <ddkilzer@webkit.org>
 
         Reviewed by Darin.
